# ptrader

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  papertrade.yml
scripts/: sample_run.py
src/ptrader/: __init__.py
src/ptrader/cli/: __init__.py  main.py
src/ptrader/config/: __init__.py  types.py  validate.py
src/ptrader/data/: __init__.py  alpaca.py  feed.py
src/ptrader/engine/: __init__.py  backtest.py  live.py  paper.py  real.py
src/ptrader/features/: __init__.py  engineer.py  schema.py
src/ptrader/labels/: __init__.py  adaptive.py  gates.py
src/ptrader/metrics/: __init__.py  loggers.py  prometheus.py
src/ptrader/models/: __init__.py  base.py  ensemble.py  lgb.py  sk.py
src/ptrader/risk/: __init__.py  controls.py  sizing.py  slippage.py
tests/: test_alpaca.py  test_backtest_runner.py  test_cli.py  test_cli_confirm_real.py  test_cli_invalid_keys.py  test_config.py  test_features.py  test_feed.py  test_labels.py  test_live_engine.py  test_live_run.py  test_models.py  test_paper_engine.py  test_prometheus.py  test_prometheus_idempotent.py  test_real_engine.py  test_risk.py
