[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptrader"
version = "0.1.0"
description = "Intraday crypto trading system with exec-price parity, adaptive labeling, and volatility-aware risk."
authors = [{ name = "Dare Afolabi", email = "dare-afolabi@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8,<4.0"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "joblib>=1.2",
    "requests>=2.28",
    "prometheus-client>=0.16",
    "typing-extensions>=4.0",
    "lightgbm>=4.0",
    "alpaca-py>=0.21",
    "click>=8.1",
    "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1,<8.0",
    "black>=24.0",
    "flake8>=6.0",
    "flake8-pyproject",
    "pandas-stubs",
    "types-requests",
    "types-setuptools",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ptrader" = ["py.typed"]

[project.scripts]
ptrader = "ptrader.cli.main:main"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503", "E701", "E704"]
